# sas-rs

./: .gitignore  Cargo.toml  README.md  completion-ledger.md  journal.md  request-plan.md  spec.md
.github/: .repomixignore  agent-rewrite-architecture.md  copilot-instructions.md
.github/agents/: BackendSupervisor.agent.md  FrontendSupervisor.agent.md  Full-StackSupervisor.agent.md  HumanReadabilityRefactorer.agent.md  Implementer.agent.md  IssueTracker.agent.md  MemoryFinder.agent.md  MemoryResearcher.agent.md  PRManager.agent.md  PRPlanner.agent.md  ProjectInitializer.agent.md  (+6 more)
.memories/: 00index.md  00template.md  How do we run the foundation assumption probe benchmark.md
.tmp/: transform-bounded-memory-72959-1776413545166186000.parquet  transform-parallel-batch-72959-1776413545166196000.parquet
benches/: README.md  assumption_probe.rs  parser_decode.rs  pr07_real_file_notes.md  transform_write.rs
fuzz/: Cargo.toml  README.md
sample-sas-datasets/: 10rec.sas7bdat  FileFromJMP.sas7bdat  cbsatocountycrosswalk.sas7bdat  event4.sas7bdat  fts0003.sas7bndx  issue1_pandas.sas7bdat  issue_pandas.sas7bdat  julian_hhmm.sas7bdat  one_observation.sas7bdat  osteo_analysis_data.sas7bdat  q_del_pandas.sas7bdat  q_pandas.sas7bdat  sas_data_haven_728.sas7bdat  timesimple_parso.sas7bdat  yrbscol.sas7bdat  zero_observations.sas7bdat
src/: README.md  cli.rs  lib.rs  main.rs
tests/: README.md  assumption_probe_contract.rs  cli_transform_contract.rs  parser_contract.rs  parser_decode_contract.rs  transform_contract.rs  transform_parser_integration.rs  validation_contract.rs
(+135 files in other folders)
