[package]
name = "sas-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "sas_rs"
path = "src/lib.rs"

[[bin]]
name = "sasrs"
path = "src/main.rs"

[dependencies]
arrow-array = "58.1.0"
arrow-schema = "58.1.0"
clap = { version = "4.5.38", features = ["derive"] }
parquet = "58.1.0"
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "assumption_probe"
harness = false

[[bench]]
name = "parser_decode"
harness = false

[[bench]]
name = "transform_write"
harness = false
